# fdefdfgdfdfdf

client/: package.json  pnpm-lock.yaml  tsconfig.json
client/src/: App.tsx  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: constants.rs  lib.rs  types.rs
client/src-tauri/src/commands/: auth.rs  common.rs  mod.rs
client/src-tauri/src/util/: mod.rs
client/src-tauri/src/websocket/: event.rs  mod.rs
client/src/components/: ChatAddDialog.tsx  ChatMessages.tsx  ChatPage.tsx  SideBar.tsx
client/src/examples/: TypingExamples.tsx
client/src/hooks/: AppProvider.tsx  MessagesProvider.tsx  useAppManager.ts  useMessages.ts
client/src/lib/: utils.ts
server/: .env  Cargo.toml  docker-compose.yml
server/.sqlx/: query-ab8cdd123063ae7bd44488a21de34588beb510756cc4f8b33c1fd7fa2e969166.json  query-cfd0db38cd701db1acb8e6eb0fadb309c2152267e66562449b8c1a2b2570fcf3.json
server/init-scripts/: 0_init.sql
server/src/: error.rs  main.rs  types.rs
server/src/endpoints/: mod.rs
server/src/utils/: mod.rs
server/src/websocket/: actions.rs  event.rs  mod.rs  server.rs
