cargo-features = ["trim-paths"]

[package]
name = "client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.47.1"
jsonwebtoken = "9.3.1"
dotenvy = "0.15.7"
tauri-plugin-websocket = "2"
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
futures-util = "0.3.31"
tauri-plugin-http = "2"
postcard = { version = "1.1.3", features = ["alloc"] }
tauri-plugin-process = "2"
reqwest = { version = "0.12.23", features = ["json"] }
tauri-plugin-dialog = "2"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
debug = false
strip = true
incremental = false
trim-paths = "all"
